--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
+body {
+  margin: 0;
+}
+
+#canvas-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 canvas {
     border: 4px solid rgb(8, 141, 236);
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-      
   }
 
  
@@ -15,7 +21,5 @@ canvas {
   }
   
   .start-btn {
-    display: flex;
-    margin-left: 50%;
-    margin-top: 50%;
+    margin-top: 20px;
   }
