--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  background: url("./img/FONDOPANTALLA.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #canvas-container {
@@ -11,7 +15,7 @@ body {
 }
 
 canvas {
-    border: 4px solid rgb(8, 141, 236);
+    border: 2px solid white;
   }
 
  
@@ -26,8 +30,11 @@ canvas {
 
   #life-bar {
     height: 30px;
-    background-color: red;
+    background-color: white;
     position: absolute;
     top: 100px;
-    left: 30px;
+    left: 60px;
   }
+
+  
+
